--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-google-maps/api": "^2.19.2",
     "babel-plugin-macros": "^3.1.0",
+    "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.16",
     "react": "^18.2.0",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "styled-components": "^6.1.1"
